templates/server/service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/part-of: immich

spec:
  selector:
    app.kubernetes.io/name: server
    app.kubernetes.io/part-of: immich
  ports:
    - name: http
      port: 3003
    - name: metrics-api
      port: 8081
    - name: metrics-micro
      port: 8082
